Fix line-height for headers on mobile devices

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -12,7 +12,6 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 14pt;
 
-    line-height: 1.3em;
 
     padding: 5em 25%;
 
@@ -30,6 +29,10 @@ body {
     h1, h2, h3, h4 {
         padding-top: 1em;
         padding-bottom: 0.3em;
+    }
+
+    p {
+        line-height: 1.3em;
     }
 
     blockquote {
